# nhc

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  Dockerfile  Dockerfile.base  LICENSE  LICENSE-CONTENT.md  Makefile  README.md  debug-bundle  docker-compose.yml  nhc.py  nhc_web.py  package-lock.json  package.json  play  pyproject.toml  requirements.txt  rust-toolchain.toml  server
content/testland/: locale_keys.yaml  pack.yaml
content/testland-perlin/: pack.yaml
content/testland-v2/: pack.yaml
crates/nhc-render/: Cargo.toml  pyproject.toml
crates/nhc-render-wasm/: Cargo.toml
crates/nhc-render-wasm/src/: lib.rs  web_canvas.rs
crates/nhc-render/src/: geometry.rs  lib.rs  perlin.rs  python_random.rs  rng.rs  test_util.rs
crates/nhc-render/src/ffi/: mod.rs  pyo3.rs  wasm.rs
crates/nhc-render/src/ir/: floor_ir_generated.rs  mod.rs
crates/nhc-render/src/painter/: canvas.rs  material.rs  mod.rs  skia.rs  svg.rs  test_util.rs
crates/nhc-render/src/painter/families/: cave.rs  earth.rs  liquid.rs  mod.rs  plain.rs  special.rs  stone.rs  wood.rs
crates/nhc-render/src/primitives/: brick.rs  bush.rs  cart_tracks.rs  cobblestone.rs  field_stone.rs  flagstone.rs  floor_detail.rs  floor_grid.rs  fountain.rs  hatch.rs  mod.rs  opus_romano.rs  ore_deposit.rs  shadow.rs  stairs.rs  terrain_detail.rs  terrain_tints.rs  thematic_detail.rs  tree.rs  walls_and_floors.rs  well.rs  wood_floor.rs
crates/nhc-render/src/transform/: mod.rs  png.rs
crates/nhc-render/src/transform/canvas/: mod.rs
crates/nhc-render/src/transform/png/: building_exterior_wall.rs  building_interior_wall.rs  bush.rs  corridor_wall_op.rs  decorator.rs  enclosure.rs  exterior_wall_op.rs  fixture_op.rs  floor_detail.rs  floor_grid.rs  floor_op.rs  fountain.rs  fragment.rs  generic_procedural.rs  hatch.rs  hatch_op.rs  interior_wall_op.rs  masonry.rs  mod.rs  paint_op.rs  path_op.rs  path_parser.rs  polygon_path.rs  roof.rs  roof_op.rs  shadow.rs  stairs.rs  stamp_op.rs  stroke_op.rs  svg_attr.rs  terrain_detail.rs  terrain_tints.rs  thematic_detail.rs  tree.rs  walls_and_floors.rs  well.rs
crates/nhc-render/src/transform/png/v5/: fixture_op.rs  hatch_op.rs  mod.rs  paint_op.rs  path_op.rs  region_path.rs  roof_op.rs  stamp_op.rs  stroke_op.rs
crates/nhc-render/src/transform/svg/: mod.rs  raster.rs
deploy/: duckdns-update.service  duckdns-update.timer  nhc.service  setup.sh  update.sh
design/: biome_features.md  building_generator.md  building_interiors.md  canvas_rendering.md  debug_tools.md  design.md  dungeon_generator.md  hexcrawl_generator.md  ir_primitives.md  level_surface_layout.md  magic_items.md  map_ir.md  map_ir_v4.md  map_ir_v4e.md  map_ir_v5.md  overland_hexcrawl.md  overland_hexcrawl_v2.md  random_tables.md  roof_patterns.md  sites.md  typed_gameplay.md  views.md  web_client.md  world_expansion.md
docs/: Knave_10-CA.md  help_ca.md  help_en.md  help_es.md
levels/: test_level.yaml
nhc/: __init__.py  config.py  llm.py  log_utils.py
nhc/ai/: __init__.py  behavior.py  henchman_ai.py  pathfinding.py  retreat.py  tactics.py
nhc/core/: __init__.py  actions.py  autosave.py  death.py  ecs.py  events.py  game.py  game_input.py  game_ticks.py  hex_session.py  npc_interactions.py  save.py  site_cache.py  sub_hex_cache.py  sub_hex_entry.py  sub_hex_populator.py
nhc/debug_tools/: __init__.py  __main__.py  base.py  mcp_server.py
nhc/dungeon/: __init__.py  building.py  classic.py  edges.py  generator.py  loader.py  model.py  params.py  pipeline.py  populator.py  room_types.py  site.py  templates.py  terrain.py  themes.py  transforms.py
nhc/entities/: __init__.py  components.py  registry.py
nhc/hexcrawl/: __init__.py  _astar.py  _biome_data.py  _edge_stamping.py  _features.py  _features_scored.py  _features_v2.py  _flowers.py  _gen_v2.py  _generator.py  _paths.py  _paths_v2.py  _rivers.py  _rivers_v2.py  clock.py  coords.py  debug.py  encounter.py  encounter_pipeline.py  encounter_text.py  generator.py  mode.py  model.py  noise.py  pack.py  patterns.py  rumor_pool.py  rumors.py  seed.py  sub_hex_sites.py  tiles.py  town.py  underworld.py
nhc/i18n/: __init__.py  manager.py
nhc/narrative/: __init__.py  context.py  dialogue.py  fallback_parser.py  gm.py  mcp_server.py  narrator.py  parser.py  prompts.py  quests.py  story.py
nhc/rendering/: __init__.py  _building_walls.py  _cave_geometry.py  _decorators.py  _doors_svg.py  _dungeon_polygon.py  _enclosures.py  _features_svg.py  _floor_detail.py  _floor_layers.py  _hatching.py  _outline_helpers.py  _perlin.py  _pipeline.py  _render_context.py  _roofs.py  _room_outlines.py  _shadows.py  _stairs_svg.py  _svg_helpers.py  _terrain_detail.py  _walls_floors.py  base.py  building.py  client.py  hatch_polygon.py  ir_emitter.py  ir_to_svg.py  level_svg.py  message_throttle.py  site_svg.py  svg.py  terrain_palette.py  web_client.py
nhc/rules/: __init__.py  abilities.py  advancement.py  chargen.py  combat.py  conditions.py  identification.py  loot.py  magic.py  potions.py  prices.py
nhc/sites/: __init__.py  _layout.py  _placement.py  _population.py  _site.py  _town_layout.py  _town_streets.py  _types.py  campsite.py  clearing.py  cottage.py  den.py  farm.py  graveyard.py  keep.py  mage_residence.py  mansion.py  orchard.py  ruin.py  sacred.py  temple.py  tower.py  town.py  wayside.py
nhc/tables/: __init__.py  effects.py  formatter.py  loader.py  registry.py  roller.py  types.py  validator.py
nhc/utils/: __init__.py  fov.py  log.py  rng.py  spatial.py
nhc/web/: __init__.py  app.py  auth.py  build_info.py  config.py  leaderboard.py  registry.py  sessions.py  tts.py  ws.py
scripts/: gen_reference.sh  harden-tests.sh  install-hooks.sh  lint_import_shadowing.py  parity_visualize.py  setup-ollama-catalan.sh  site_inspect.py
scripts/hooks/: pre-commit
tests/: conftest.py
tests/samples/: generate_hexmap.py  generate_samples.py  generate_svg.py  regenerate_fixtures.py  regenerate_perlin_vectors.py
tests/unit/: test_action_parser.py  (+268 more)
tools/: extract_foundations.py  generate_missing_hextiles.py
(+1027 files in other folders)
