# nhc-render-wasm — browser-side WASM bundle for the NHC
# rendering pipeline.
#
# A thin wrapper around `nhc-render` (built with
# ``--no-default-features --features wasm``). Every
# ``#[wasm_bindgen]`` export that the JS dispatcher in
# ``nhc/web/static/js/`` consumes lives here; the rendering
# primitives, op handlers, and Painter implementations stay in
# ``nhc-render``.
#
# Build the bundle from the workspace root with:
#
#     wasm-pack build crates/nhc-render-wasm --target web
#
# Native unit tests run on the host arch (no browser needed):
#
#     cargo test -p nhc-render-wasm --lib --release
#
# This crate is the Phase 5.1 deliverable from
# ``plans/nhc_pure_ir_v5_migration_plan.md``. The CanvasPainter
# impl (5.2), ``transform/canvas/`` op dispatcher (5.3), and JS
# dispatcher wiring (5.4) land in subsequent commits.

[package]
name = "nhc-render-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "NHC procedural map rendering — browser WASM bundle"
publish = false

[lib]
name = "nhc_render_wasm"
# cdylib: the wasm-pack output. rlib: enables ``cargo test`` to
# link the library so the native unit-test pass exercises the
# Rust logic without needing a wasm runner.
crate-type = ["cdylib", "rlib"]

[dependencies]
nhc-render = { path = "../nhc-render", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2"

# ``getrandom`` is a transitive dep (rand → getrandom) that
# refuses to build for ``wasm32-unknown-unknown`` without the
# ``js`` feature, since the wasm runtime has no OS RNG. The
# ``js`` feature routes ``getrandom`` to the browser's
# ``crypto.getRandomValues`` via web-sys. ``web-sys`` carries
# the per-feature gates needed by the Phase 5.3 ``WebCanvasCtx``
# impl. Both deps are wasm32-only — host-side ``cargo test``
# builds skip them entirely so the smoke / canvas tests run
# without a browser.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "CanvasWindingRule",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Phase 5.5 bundle hygiene — run wasm-opt with the wasm-bindgen
# 0.2 + Rust 1.95 feature set explicitly enabled so the
# validator accepts the cargo output across wasm-opt versions.
# ``-O1`` is the empirical sweet spot for *gzipped* size on this
# crate: -O / -Os / -Oz all produce smaller raw .wasm but
# slightly larger after gzip (a 4-5 KB swing). The web serves
# the bundle gzipped, so we optimise for the on-the-wire size
# the player actually downloads.
#
# The repo-root profile.release already sets ``opt-level = "z"``,
# ``lto = "fat"``, ``codegen-units = 1``, ``strip = true``, and
# ``panic = "abort"`` so the cargo-side bundle is already lean
# before wasm-opt runs.
[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O1",
    "--enable-bulk-memory",
    "--enable-bulk-memory-opt",
    "--enable-mutable-globals",
    "--enable-sign-ext",
    "--enable-nontrapping-float-to-int",
    "--enable-multivalue",
    "--enable-reference-types",
]
