# nhc-render — procedural map rendering primitives.
#
# Two roles:
#   1. Server-side Python extension via PyO3 (default features).
#      Builds a wheel with maturin; `nhc_render` is the import name
#      from Python.
#   2. Browser-side WASM bundle via wasm-bindgen + wasm-pack
#      (`wasm` feature, mutually exclusive with `pyo3` because the
#      two FFI surfaces both export the same primitive names with
#      different ABIs).
#
# The crate is a workspace member; the workspace root is the repo
# root, so `cargo build --release -p nhc-render` builds from
# anywhere inside the tree.

[package]
name = "nhc-render"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "NHC procedural map rendering primitives (PyO3 + WASM)"
publish = false

[lib]
name = "nhc_render"
# cdylib: the maturin wheel's .so / .pylib / wasm-pack bundle.
# rlib: enables `cargo test` and downstream Rust consumers.
crate-type = ["cdylib", "rlib"]

[features]
default = ["pyo3"]
# `pyo3` activates the optional pyo3 dependency. The
# extension-module pyo3 feature is gated separately so `cargo
# test` (which can't link against libpython on every platform)
# stays green; maturin enables `extension-module` explicitly via
# pyproject.toml's `[tool.maturin]` block.
pyo3 = ["dep:pyo3"]
extension-module = ["pyo3?/extension-module"]
wasm = ["dep:wasm-bindgen"]

[dependencies]
flatbuffers = "25.2"
# Sub-step 1.c (plan §8): brought in for the `hatch` Rust port.
# `geo` provides the polygon-line clipping used in the section
# partitioning step (Q1 strategy A — Rust-native geometry, no
# GEOS bit-parity required under the relaxed parity gate).
# `rand_pcg::Pcg64Mcg` is the per-primitive RNG; `rand` exposes
# the `Rng` / `SeedableRng` traits the PCG variant implements.
geo = "0.28"
# Phase 1.19 cave fix — Shapely-style polygon buffer with rounded
# corners. Fixes the cave-wall "knots" the hand-rolled buffer_ring
# produced at concave inflections (self-intersections were not
# dissolved). Uses straight-skeleton + rounded-corner offset.
geo-buffer = "0.2"
rand = "0.8"
rand_pcg = "0.3"
# Phase 5.1: `tiny-skia` drives the IR → PNG raster path. Default
# features include `png-format`, which pulls in `png` for
# `Pixmap::encode_png()` — that's the only sink the transform
# needs, so we lean on it rather than a separate encoder dep.
tiny-skia = "0.11"
# Phase 10.4: `resvg` + `usvg` drive the cross-rasteriser parity
# harness in `tests/unit/test_ir_png_parity.py`. The
# `nhc_render.svg_to_png` PyO3 export replaces the legacy
# `resvg-py` Python wheel; production never calls into this path.
# Pinned to the same minor as tiny-skia downstream so the pixmap
# types match without an adapter shim.
resvg = { version = "0.43", default-features = false }
usvg = { version = "0.43", default-features = false }

[dependencies.pyo3]
version = "0.24"
optional = true
features = ["abi3-py37"]

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

# Workspace-level profiles live at the repo-root Cargo.toml; cargo
# warns if a member duplicates them.
